--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --Light-grayish-cyan: hsl(185, 41%, 84%);
     --Very-light-grayish-cyan: hsl(180, 63%, 12%);
     --White: hsl(0, 0%, 100%);
+    --Red: red;
 }
 *{
     font-family: 'Space Mono', monospace;
@@ -13,65 +14,56 @@
 body{
     position: relative;
     background-color: var(--Light-grayish-cyan);
-    margin: 20px auto;
     display: flex;
     flex-direction: column;
-    gap: 4em;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     min-height: 100vh;
 }
-.container{
+main{
+    width: 70%;
     display: flex;
-    gap: 2.5em;
-    width: 50em;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--White);
-    border-radius: 15px;
-    padding: 2.5em;
+    border-radius: 10px;
+    padding: 10px;
 }
-.left{
+section{
     width: 50%;
-    display: grid;
+    padding: 20px;
 }
-.right{
-    display: grid;
-    gap: 5em;
-    width: 50%;
-    background: var(--Very-dark-cyan);
-    border-radius: 15px;
-    padding: 2em;
+.u_input{
+    display: flex;
+    flex-direction: column;
+    
 }
-.biilInput{
+.billing{
     display: flex;
     flex-direction: column;
 }
-p, label{
-    font-size: 0.9em;
-    font-weight: 700;
+.billing label{
+    font-size: 14px;
+    font-weight: 800;
     color: var(--Dark-grayish-cyan);
 }
-.biilInput label{
-    font-size: 0.9em;
-    font-weight: 700;
-    color: var(--Dark-grayish-cyan);
-}
-input{
+.billing input{
+    background: url(./icon-dollar.svg);
+    background-repeat: no-repeat;
+    background-position: 10px;
+    background-color: var(--Light-grayish-cyan);
+    border-radius: 5px;
+    outline: none;
     border: none;
-    width: 100%;
-    background: var(--Light-grayish-cyan);
-    border-radius: 4px;
-    font-weight: 700;
-    font-size: 1.2em;
     text-align: right;
-    padding: 5px;
+    padding: 7px 15px;
+    font-size: 18px;
+    font-weight: 800;
+    color: var(--Very-light-grayish-cyan);
     cursor: pointer;
 }
-input::placeholder{
-    font-weight: 700;
-    font-size: 1.2em;
-}
-input:focus{
-    border: 1px solid var(--Strong-cyan);
+.billing input:hover{
+    border: 2px solid var(--Strong-cyan);
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -79,124 +71,156 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 input[type=number] {
-    -moz-appearance: textfield;
-}
-.people input{
-    background: url(./icon-person.svg) var(--Light-grayish-cyan);
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position: 15px;  
-}
-.custom-tip input{
-    width: 30%;
-    text-align: center;
-    float: right;
-    cursor: pointer;
-}
-.custom-tip input:hover{
-    border: 2px solid var(--Strong-cyan);
-    background-color: var(--White);
-}
-.biilInput input{
-    background: url(./icon-dollar.svg) var(--Light-grayish-cyan);
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position: 15px;    
+  -moz-appearance: textfield;
 }
 .tips{
     display: flex;
     flex-direction: column;
-    gap: 1em;
 }
-.top{
-    display: flex;
-    flex-direction: column;
+.tips p{
+    padding-top: 10px;
+    font-size: 14px;
+    color: var(--Dark-grayish-cyan);
+    font-weight: 800;
 }
-.tpss{
+.tip_sel{
+    width: 100%;
     display: flex;
-    gap: 5%;
-}
-.bottom{
-    display: flex;
-    gap: 5%;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 .tip{
-    width: 32%;
-    background: var(--Very-dark-cyan);
-    text-align: center;
-    padding: 7px;
-    font-size: 1.2em;
+    width: 30%;
+    margin-bottom: 10px;
+    background-color: var(--Very-light-grayish-cyan);
+    padding: 7px 10px;
+    font-size: 18px;
     color: var(--White);
-    font-weight: 700;
-    border-radius: 7px;
+    font-weight: 800;
+    border-radius: 5px;
+    outline: none;
+    border: none;
     cursor: pointer;
 }
 .tip:hover{
     background-color: var(--Strong-cyan);
 }
-.bottom .tip{
-    width: 55%;
+.tip_sel input{
+    width: 25%;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: 800;
+    color: var(--Very-light-grayish-cyan);
+    height: 37px;
+    padding: 0 10px;
+    background-color: var(--Light-grayish-cyan);
+    cursor: pointer;
 }
-#custom-tip{
-    width: 90%;
+.tip_sel input:hover{
+    border: 2px solid var(--Strong-cyan);
 }
-.output{
+.people{
+    margin-top: 10px;
     display: flex;
+    gap: 10px;
     flex-direction: column;
-    gap: 1em;
+    justify-content: space-between;
 }
 .label{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.labl{
-    display: flex;
-    justify-content: space-between;
+.label label{
+    font-size: 14px;
+    font-weight: var(--Light-grayish-cyan);
+    font-weight: 800;
+    color: var(--Dark-grayish-cyan);
 }
-.label-person{
-    line-height: 1.1em;
+.label label.error_msg{
+    display: none;
+    color: var(--Red);
+}
+.people input{
+    background: url(./icon-person.svg);
+    background-repeat: no-repeat;
+    background-position: 10px;
+    background-color: var(--Light-grayish-cyan);
+    outline: none;
+    border: none;
+    text-align: right;
+    padding: 7px 15px;
+    font-size: 18px;
+    font-weight: 800;
+    color: var(--Grayish-cyan);
+    border-radius: 5px;
+    cursor: pointer;
+}
+.people input:hover{
+    border: 2px solid var(--Strong-cyan);
+}
+.people input.error{
+    border: 1px solid var(--Red);
+}
+.u_output{
+    background-color: var(--Very-light-grayish-cyan);
+    display: grid;
+    border-radius: 5px;
+}
+.output{
+    display: flex;
+    flex-direction: column;
+    margin: 5px 5px 20px 5px;
+}
+.label_op{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 .label-person p{
+    font-size: 14px;
     color: var(--White);
-    font-weight: 700;
-    font-size: 0.9em;
+    font-weight: 800;
 }
 .label-person span{
     color: var(--Grayish-cyan);
-    font-size: 0.8em;
-    font-weight: 700;
+    font-size: 12px;
+    padding-left: 3px;
+}
+#tip_amount,
+#total{
+    font-size: 36px;
+    color: var(--Strong-cyan);
+}
+.btn button{
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    background-color: var(--Very-dark-cyan);
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: var(--White);
+    font-weight: 800;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.btn button:hover{
+    background-color: var(--Strong-cyan);
 }
 .active{
     background-color: var(--Strong-cyan);
 }
-.error-msg{
-    color: red;
-    font-weight: 500;
-    visibility: hidden;
-}
-.error{
-    border: 2px solid red;
-}
-.btn button{
-    width: 100%;
-    text-transform: uppercase;
-    background: var(--Very-light-grayish-cyan);
-    border-radius: 7px;
-    border: none;
-    font-size: 1.1em;
-    padding: 7px;
-    color: var(--Light-grayish-cyan);
-    font-weight: 7;
-    cursor: pointer;
-}
-.tip-amount{
-    font-size: 2em;
-    color: var(--Strong-cyan);
-    font-weight: 700;
-}
-.total{
-    font-size: 2em;
-    color: var(--Strong-cyan);
-    font-weight: 700;
+@media screen and (max-width: 800px) {
+    main{
+        width: 90%;
+        flex-wrap: wrap;
+    }
+    section{
+        width: 100%;
+    }
 }
